--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,15 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "stream": "^0.0.2",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -35,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "browser": { "crypto": false, "stream": false }
 }
